# Raft

./: Config.hs  ConnectionTypes.hs  Debug.hs  Demo.hs  Dockerfile  ExitCodes.hs  JsonStorage.hs  Main.hs  MessageTypes.hs  README.md  Raft.hs  RaftTypes.hs  Rakefile  raft.cabal  raft.hs
app/: Main.hs
conf/: config.1.json  config.3.json  config.auto.json  config.json
src/: Config.hs  ConnectionTypes.hs  JsonStorage.hs  Raft.hs  RaftTypes.hs
