name:                raft
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/name/project
license:             BSD3
license-file:        LICENSE
author:              Your name here
maintainer:          your.address@example.com
-- copyright:
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Raft Config RaftTypes ConnectionTypes MessageTypes JsonStorage
  build-depends:
                base >= 4.7 && < 5,
                lens >= 4.12,
                aeson >= 0.8.0.2,
                bytestring >= 0.10.6.0,
                containers >= 0.5.6.2,
                mtl >= 2.2.1
  default-language:    Haskell2010

executable raft-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , raft
  default-language:    Haskell2010

test-suite raft-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , raft
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/name/project
